# DataScience_Journey

./: .gitignore  Path.md  matric_multiplication.py  practice_Q12_strang_multi.py  practice_Q6_strang.py  pyproject.toml  sinwave.py  test.py  vector_anm.py  vector_plt.py  yt_length.ipynb
Phase_1/: example.ipynb
Phase_1/Example/: try1.ipynb  try2.ipynb
Phase_1/Requests/: documentation.ipynb  first_try.ipynb  pycharm.py
Phase_1/Selenium/: first.ipynb
Phase_1/demo/: train1.ipynb  train2.ipynb
Phase_1/lxml/: first.ipynb  second.ipynb
Phase_1/urllib3/: example.txt  first.ipynb  try.py
Reality/Linear_Regression/: dekho.ipynb
