[[tool.uv.index]]
url = "file:///C:/DataScience/pytorch"
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128 "
explicit = true

[project]
name = "datascience"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "aiohttp-robots",
    "docx>=0.2.4",
    "fastparquet>=2024.11.0",
    "ffmpeg-downloader>=0.4.0",
    "google-api-python-client>=2.176.0",
    "isodate>=0.7.2",
    "jupyter>=1.1.1",
    "lxml>=6.0.0",
    "matplotlib>=3.10.3",
    "modin[ray]>=0.33.2",
    "mpmath>=1.3.0",
    "networkx>=3.5",
    "notebook>=7.4.2",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
    "python-docx>=1.2.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "selenium>=4.34.2",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
    "urllib3>=2.4.0",
    "webdriver-manager>=4.0.2",
    "yt-dlp>=2025.8.27",
]
